@@ -443,10 +443,12 @@ class TRepeater extends TDataBoundControl implements INamingContainer
 		$items=$this->getItems();
 		$itemIndex=0;
 		$hasSeparator=$this->_separatorTemplate!==null;
-		foreach($data as $dataItem)
+		foreach($data as $key=>$dataItem)
 		{
 			if($keyField!=='')
 				$keys->add($this->getDataFieldValue($dataItem,$keyField));
+			else
+				$keys->add($key);
 			if($itemIndex===0 && $this->_headerTemplate!==null)
 				$this->_header=$this->createItemInternal(-1,self::IT_HEADER,true,null);
 			if($hasSeparator && $itemIndex>0)
